# GoNitro-Cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  nitro.rs  server.rs
